--- a/pages/facts.html
+++ b/pages/facts.html
@@ -173,7 +173,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header" id="fact-header1">
-                                    <h5 class="modal-title text-light"><b>More deatils information</b></h5>
+                                    <h5 class="modal-title text-light"><b>1/3 of all food</b></h5>
                                     <button type="button" class="btn-close fs-5" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
 
@@ -204,7 +204,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header" id="fact-header1">
-                                    <h5 class="modal-title text-light"><b>More details information</b></h5>
+                                    <h5 class="modal-title text-light"><b>Household Waste</b></h5>
                                     <button type="button" class="btn-close fs-5" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
 
@@ -235,7 +235,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header" id="fact-header1">
-                                    <h5 class="modal-title text-light"><b>More deatails information</b></h5>
+                                    <h5 class="modal-title text-light"><b>Food Waste by human consumption</b></h5>
                                     <button type="button" class="btn-close fs-5" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
 
@@ -268,7 +268,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header" id="fact-header1">
-                                    <h5 class="modal-title text-light"><b>More deatails information</b></h5>
+                                    <h5 class="modal-title text-light"><b>Econimic Impact</b></h5>
                                     <button type="button" class="btn-close fs-5" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
 
@@ -299,7 +299,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header" id="fact-header1">
-                                    <h5 class="modal-title text-light"><b>More deatails information</b></h5>
+                                    <h5 class="modal-title text-light"><b>Edible food</b></h5>
                                     <button type="button" class="btn-close fs-5" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
 
@@ -328,7 +328,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header" id="fact-header6">
-                                    <h5 class="modal-title text-light"><b>More deatails information</b></h5>
+                                    <h5 class="modal-title text-light"><b>Hunger Impact</b></h5>
                                     <button type="button" class="btn-close fs-5" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
 
