--- a/pages/about.html
+++ b/pages/about.html
@@ -156,7 +156,7 @@
 
                           Soon, we found out that food waste is a global issue that so many people are facing. We decided to create a sustainable website, which is about food waste. 
                             
-                         <span class="bg-success"><b>Whoever visits our website, we ensure that everyone can handle the food waste effectively to lead a sustainable life for everyone. Moreover, we create our own organization logo and put interactive quizzes and games as well.</b></span> 
+                         <span class="bg-success text-light"><b>Whoever visits our website, we ensure that everyone can handle the food waste effectively to lead a sustainable life for everyone. Moreover, we create our own organization logo and put interactive quizzes and games as well.</b></span> 
                         <p>  
                     </div>
                 </div>
