--- a/pages/expiration.html
+++ b/pages/expiration.html
@@ -92,28 +92,27 @@
 
         <div class="container">
             <!-- What are Expiration Dates? -->
-            <div class=" def-card row mb-5" data-aos="fade-up" data-aos-duration="2000">
-                <div class="col-lg-6 mb-4">
-                    <div class="expire-card">
-                        <img src="../media/expire3.jpg" class="card-image" alt="expiration date on food package">
+            <div class="def-card row g-3 align-items-stretch  mb-3" data-aos="fade-up" data-aos-duration="2000">
+                <div class="col-lg-6">
+                    <div class="expire-card h-100">
+                        <img src="../media/expire3.jpg" class="img-fluid h-100 w-100 object-fit-cover" alt="expiration date on food package">
                     </div>
                 </div>
 
-                <!-- def  -->
                 <div class="col-lg-6">
-                    <div class="expire-card p-4">
+                    <div class="expire-card h-100 p-4 d-flex flex-column justify-content-center">
                         <h2 class="card-title mb-4"><i class="fas fa-question-circle me-2"></i>Expired Food & Expired Date</h2>
-                        <p class="text-dark text-center fs-5">
-                            There are two types of data, which are <i>“sell by”</i> and <i>“ use by”</i>. 
-                        </p>
-
-                        <p class="fs-5">
-                            <strong class="bg-success">Expired Food</strong> - Expired food refers to food products that have passed their <strong>“use by” or “expiration date”</strong> 
-                        </p>
-
-                        <p class="fs-5">
-                            <strong class="bg-success">Expired Date</strong> - The dates you see on food packaging write with (EXP) mean the expired date and that show how long food maintains the best taste and texture.
-                        </p>
+                        <div class="expired-text">
+                            <p class="text-dark text-center fs-5 mb-3">
+                                There are two types of data, which are <i>"sell by"</i> and <i>"use by"</i>.
+                            </p>
+                            <p class="fs-5 mb-3">
+                                <strong class="bg-success p-1 rounded">Expired Food</strong> - Expired food refers to food products that have passed their <strong>"use by" or "expiration date"</strong>
+                            </p>
+                            <p class="fs-5">
+                                <strong class="bg-success p-1 rounded">Expired Date</strong> - The dates you see on food packaging write with (EXP) mean the expired date and that show how long food maintains the best taste and texture.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
