--- a/pages/spoilage.html
+++ b/pages/spoilage.html
@@ -144,7 +144,7 @@
                                     </ul>
 
                                     <div class="text-center">
-                                        <iframe width="560" height="315" src="https://www.youtube.com/embed/PjDhr8ntMIc?si=_puntbqZwIi1uEAB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                                        <iframe width="100%" height="400" src="https://www.youtube.com/embed/PjDhr8ntMIc?si=_puntbqZwIi1uEAB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
                                         </iframe>
                                     </div>
                                     
