--- a/pages/facts.html
+++ b/pages/facts.html
@@ -254,7 +254,7 @@
                     <div class="fact-item col-lg-3 col-md-5 col-sm-10 col-10 m-4">
                         <div class="fact-item p-4">
                             <i class="fa-solid fa-seedling mb-3 text-success"></i>
-                            <h4>Econiomic Impact</h4>
+                            <h4>Economic Impact</h4>
                             <p class="fs-5">
                                 Global food waste has an estimated economic cost of about $1 trillion annually.
                             </p>
@@ -268,7 +268,7 @@
                         <div class="modal-dialog modal-lg">
                             <div class="modal-content">
                                 <div class="modal-header" id="fact-header1">
-                                    <h5 class="modal-title text-light"><b>Econimic Impact</b></h5>
+                                    <h5 class="modal-title text-light"><b>Economic Impact</b></h5>
                                     <button type="button" class="btn-close fs-5" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
 
